--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.servlet.context-path=/api/v1
+
+
+#security
+jwt.secretKey=asdfjooodoadjfojdfojaofjosghafhohikigmyggmbmygbg
