--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,21 @@ server.servlet.context-path=/api/v1
 
 
 
+
+#smtp config
+spring.mail.username=rjrajujames321@gmail.com
+spring.mail.password=noqs dzjp iakh sdqm
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
+
+
+
+
+
+
